# cc-bench-schema

./: pyproject.toml
src/cc_bench_schema/: benchmark.py  diffstats.py  reference.py  summary.py
