[project]
name = "cc-bench-schema"
version = "0.1.0"
description = "Shared CSV schema definitions for the cc-pipeline"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cc_bench_schema"]
